// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample test > parse common sentence 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "period": [
            {
              "endColumn": 18,
              "endLine": 1,
              "endOffset": 17,
              "image": ".",
              "startColumn": 18,
              "startLine": 1,
              "startOffset": 17,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 8,
              },
              "tokenTypeIdx": 8,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 5,
                    "endLine": 1,
                    "endOffset": 4,
                    "image": "There",
                    "startColumn": 1,
                    "startLine": 1,
                    "startOffset": 0,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 8,
                    "endLine": 1,
                    "endOffset": 7,
                    "image": "is",
                    "startColumn": 7,
                    "startLine": 1,
                    "startOffset": 6,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 11,
                    "endLine": 1,
                    "endOffset": 10,
                    "image": "no",
                    "startColumn": 10,
                    "startLine": 1,
                    "startOffset": 9,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 17,
                    "endLine": 1,
                    "endOffset": 16,
                    "image": "error",
                    "startColumn": 13,
                    "startLine": 1,
                    "startOffset": 12,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 15,
              "endLine": 1,
              "endOffset": 14,
              "image": "Function format",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 26,
              "endLine": 1,
              "endOffset": 25,
              "image": ".",
              "startColumn": 26,
              "startLine": 1,
              "startOffset": 25,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 8,
              },
              "tokenTypeIdx": 8,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 19,
                    "endLine": 1,
                    "endOffset": 18,
                    "image": "not",
                    "startColumn": 17,
                    "startLine": 1,
                    "startOffset": 16,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 25,
                    "endLine": 1,
                    "endOffset": 24,
                    "image": "found",
                    "startColumn": 21,
                    "startLine": 1,
                    "startOffset": 20,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function not found error 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 15,
              "endLine": 1,
              "endOffset": 14,
              "image": "Function format",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 26,
              "endLine": 1,
              "endOffset": 25,
              "image": ".",
              "startColumn": 26,
              "startLine": 1,
              "startOffset": 25,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 8,
              },
              "tokenTypeIdx": 8,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 19,
                    "endLine": 1,
                    "endOffset": 18,
                    "image": "not",
                    "startColumn": 17,
                    "startLine": 1,
                    "startOffset": 16,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 25,
                    "endLine": 1,
                    "endOffset": 24,
                    "image": "found",
                    "startColumn": 21,
                    "startLine": 1,
                    "startOffset": 20,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function with namespace error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 19,
              "endLine": 1,
              "endOffset": 18,
              "image": "Function abc\\format",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 30,
              "endLine": 1,
              "endOffset": 29,
              "image": ".",
              "startColumn": 30,
              "startLine": 1,
              "startOffset": 29,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 8,
              },
              "tokenTypeIdx": 8,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 23,
                    "endLine": 1,
                    "endOffset": 22,
                    "image": "not",
                    "startColumn": 21,
                    "startLine": 1,
                    "startOffset": 20,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 29,
                    "endLine": 1,
                    "endOffset": 28,
                    "image": "found",
                    "startColumn": 25,
                    "startLine": 1,
                    "startOffset": 24,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse method error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "(A|a)nonymousFunction": [
            {
              "endColumn": 18,
              "endLine": 1,
              "endOffset": 17,
              "image": "Anonymous function",
              "startColumn": 1,
              "startLine": 1,
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /Anonymous function/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "(A|a)nonymousFunction",
                "tokenTypeIdx": 4,
              },
              "tokenTypeIdx": 4,
            },
          ],
          "period": [
            {
              "endColumn": 93,
              "endLine": 1,
              "endOffset": 92,
              "image": ".",
              "startColumn": 93,
              "startLine": 1,
              "startOffset": 92,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 8,
              },
              "tokenTypeIdx": 8,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 22,
                    "endLine": 1,
                    "endOffset": 21,
                    "image": "has",
                    "startColumn": 20,
                    "startLine": 1,
                    "startOffset": 19,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 30,
                    "endLine": 1,
                    "endOffset": 29,
                    "image": "invalid",
                    "startColumn": 24,
                    "startLine": 1,
                    "startOffset": 23,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 37,
                    "endLine": 1,
                    "endOffset": 36,
                    "image": "return",
                    "startColumn": 32,
                    "startLine": 1,
                    "startOffset": 31,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 42,
                    "endLine": 1,
                    "endOffset": 41,
                    "image": "type",
                    "startColumn": 39,
                    "startLine": 1,
                    "startOffset": 38,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 74,
                    "endLine": 1,
                    "endOffset": 73,
                    "image": "TestClosureFunctionTypehintsPhp",
                    "startColumn": 44,
                    "startLine": 1,
                    "startOffset": 43,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 92,
                    "endLine": 1,
                    "endOffset": 91,
                    "image": "NonexistentClass",
                    "startColumn": 77,
                    "startLine": 1,
                    "startOffset": 76,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse method with namespace error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "FunctionTarget": [
            {
              "endColumn": 38,
              "endLine": 1,
              "endOffset": 37,
              "image": "function has",
              "startColumn": 27,
              "startLine": 1,
              "startOffset": 26,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": /\\(F\\|f\\)unction \\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionTarget",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "endColumn": 64,
              "endLine": 1,
              "endOffset": 63,
              "image": ".",
              "startColumn": 64,
              "startLine": 1,
              "startOffset": 63,
              "tokenType": {
                "CATEGORIES": [],
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 8,
              },
              "tokenTypeIdx": 8,
            },
          ],
          "word": [
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 9,
                    "endLine": 1,
                    "endOffset": 8,
                    "image": "Parameter",
                    "startColumn": 1,
                    "startLine": 1,
                    "startOffset": 0,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "Variable": [
                  {
                    "endColumn": 12,
                    "endLine": 1,
                    "endOffset": 11,
                    "image": "$a",
                    "startColumn": 11,
                    "startLine": 1,
                    "startOffset": 10,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\\\\\$\\[a-z\\]\\[a-zA-Z0-9_\\]\\*/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "Variable",
                      "tokenTypeIdx": 12,
                    },
                    "tokenTypeIdx": 12,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 15,
                    "endLine": 1,
                    "endOffset": 14,
                    "image": "of",
                    "startColumn": 14,
                    "startLine": 1,
                    "startOffset": 13,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 25,
                    "endLine": 1,
                    "endOffset": 24,
                    "image": "anonymous",
                    "startColumn": 17,
                    "startLine": 1,
                    "startOffset": 16,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 51,
                    "endLine": 1,
                    "endOffset": 50,
                    "image": "unresolvable",
                    "startColumn": 40,
                    "startLine": 1,
                    "startOffset": 39,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 58,
                    "endLine": 1,
                    "endOffset": 57,
                    "image": "native",
                    "startColumn": 53,
                    "startLine": 1,
                    "startOffset": 52,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
            {
              "children": {
                "CommonWord": [
                  {
                    "endColumn": 63,
                    "endLine": 1,
                    "endOffset": 62,
                    "image": "type",
                    "startColumn": 60,
                    "startLine": 1,
                    "startOffset": 59,
                    "tokenType": {
                      "CATEGORIES": [],
                      "PATTERN": /\\[a-zA-Z\\]\\+/,
                      "categoryMatches": [],
                      "categoryMatchesMap": {},
                      "isParent": false,
                      "name": "CommonWord",
                      "tokenTypeIdx": 6,
                    },
                    "tokenTypeIdx": 6,
                  },
                ],
              },
              "name": "word",
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;
